--- a/JSE-SWING-JDBC-PROYECTO-CASA/nbproject/project.properties
+++ b/JSE-SWING-JDBC-PROYECTO-CASA/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.jar=${dist.dir}/JSE-SWING-JDBC-PROYECTO-CASA.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mysql-jdbc.jar=C:\\Users\\Tamara\\Documents\\NetBeansProjects\\jars\\mysql-jdbc.jar
+file.reference.swing.jar=C:\\Users\\Tamara\\Documents\\NetBeansProjects\\jars\\swing.jar
 file.reference.swingg.jar=C:\\Users\\Tamara\\Documents\\NetBeansProjects\\jars\\swingg.jar
 file.reference.utilidades.jar=C:\\Users\\Tamara\\Documents\\NetBeansProjects\\jars\\utilidades.jar
 includes=**
@@ -35,7 +36,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-jdbc.jar}:\
     ${file.reference.swingg.jar}:\
-    ${file.reference.utilidades.jar}
+    ${file.reference.utilidades.jar}:\
+    ${file.reference.swing.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
