--- a/JSE-SWING-JDBC-PROYECTO-CASA/nbproject/project.properties
+++ b/JSE-SWING-JDBC-PROYECTO-CASA/nbproject/project.properties
@@ -63,7 +63,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=test.Ejecucion
+main.class=src.test.Ejecucion
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
