--- a/JSE-SWING-JDBC-PROYECTO-CASA/nbproject/project.properties
+++ b/JSE-SWING-JDBC-PROYECTO-CASA/nbproject/project.properties
@@ -39,7 +39,8 @@ javac.classpath=\
     ${file.reference.mysql-jdbc.jar}:\
     ${file.reference.swingg.jar}:\
     ${file.reference.utilidades.jar}:\
-    ${file.reference.swing.jar}
+    ${file.reference.swing.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
