--- a/JSE-SWING-JDBC-PROYECTO-CASA/nbproject/project.properties
+++ b/JSE-SWING-JDBC-PROYECTO-CASA/nbproject/project.properties
@@ -30,9 +30,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.mysql-jdbc.jar=C:\\Users\\Tamara\\Documents\\NetBeansProjects\\jars\\mysql-jdbc.jar
+file.reference.mysql-jdbc.jar-1=F:\\otros\\jars\\mysql-jdbc.jar
 file.reference.swing.jar=C:\\Users\\Tamara\\Documents\\NetBeansProjects\\jars\\swing.jar
 file.reference.swingg.jar=C:\\Users\\Tamara\\Documents\\NetBeansProjects\\jars\\swingg.jar
+file.reference.swingg.jar-1=F:\\otros\\jars\\swingg.jar
 file.reference.utilidades.jar=C:\\Users\\Tamara\\Documents\\NetBeansProjects\\jars\\utilidades.jar
+file.reference.utilidades.jar-1=F:\\otros\\jars\\utilidades.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -40,7 +43,10 @@ javac.classpath=\
     ${file.reference.swingg.jar}:\
     ${file.reference.utilidades.jar}:\
     ${file.reference.swing.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.mysql-jdbc.jar-1}:\
+    ${file.reference.swingg.jar-1}:\
+    ${file.reference.utilidades.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
